--- a/index.html
+++ b/index.html
@@ -4,15 +4,58 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Responsive Web</title>
+
+    <!-- =====================fontAwesome======================= -->
+    <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
     <!-- ==================================Local Files===================================== -->
+    <!--========================= animate link====================== -->
+    <link rel="stylesheet" href="css/animate.css">
+
+    <!--========================= bootstrap link====================== -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="fonts/bootstrap-icons.css">
+
+    <!--========================= hover link====================== -->
+    <link rel="stylesheet" href="css/hover-min.css">
+
+    <!--========================= Jquery UI link====================== -->
+    <link rel="stylesheet" href="jquery-ui/jquery-ui.css">
+
+    <!--========================Local CSS link====================== -->
+    <link rel="stylesheet" href="sass/main.css">
+
 
     <!-- ==================================Local Files===================================== -->
 </head>
-<body>
+<body id="bd">
+
+   
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     
-    
+    <script src="js/bootstrap.bundle.js"></script>
+    <script src="jquery/jquery.js"></script>
+    <script src="jquery-ui/jquery-ui.js"></script>
+    <script src="js/main.js"></script>
+
 </body>
 </html>
