added nes jquery plugins

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body id="bd">
 
     <!-- ======================================NAVBAR SECTION============================ -=========================-->
-    <nav class="navbar navbar-expand-lg  ">
+    <nav class="navbar navbar-expand-lg ">
           <div class="container">
             <a class="navbar-brand" href="#">HELLO!</a>
             <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse" data-bs-target="#collapsibleNavId" aria-controls="collapsibleNavId"
@@ -75,7 +75,30 @@
 
 
     <!-- ======================================SLIDER SECTION============================ -=========================-->
-    
+    <section class="slider text-center" id="slider">
+        <div class="slider-overlay">
+            <div class="slider-content">
+                <div class="icons">
+                    <i class="fa fa-apple"></i>
+                    <i class="fa fa-android"></i>
+                    <i class="fa fa-windows"></i>
+                </div> <br>
+                <div class="text"></div>
+                <div class="btns">
+                    <a href="" class="btn1">Contact Us</a>
+                    <a href="" class="btn2">Learn Today</a>
+                </div><br><br>
+                <div class="social-icons">
+                    <a href="" class="" ><i class="fa fa-facebook"></i></a>
+                    <a href="" class="" ><i class="fa fa-twitter"></i></a>
+                    <a href="" class="" ><i class="fa fa-windows"></i></a>
+                    <a href="" class="" ><i class="fa fa-reddit"></i></a>
+                    <a href="" class="" ><i class="fa fa-linkedin"></i></a>
+                    <a href="" class="" ><i class="fa fa-cog"></i></a>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     
@@ -105,6 +128,8 @@
     <script src="js/bootstrap.bundle.js"></script>
     <script src="jquery/jquery.js"></script>
     <script src="jquery-ui/jquery-ui.js"></script>
+    <script src="js/jquery.ripples-min.js"></script>
+
     <script src="js/main.js"></script>
 
 </body>
