--- a/index.html
+++ b/index.html
@@ -126,11 +126,17 @@
 
     
     <script src="js/bootstrap.bundle.js"></script>
+
     <script src="jquery/jquery.js"></script>
+
     <script src="jquery-ui/jquery-ui.js"></script>
+
+
     <script src="js/jquery.ripples-min.js"></script>
 
     <script src="js/main.js"></script>
+    <script src="js/typed.min.js"></script>
+
 
 </body>
 </html>
