--- a/index.html
+++ b/index.html
@@ -83,7 +83,10 @@
                     <i class="fa fa-android"></i>
                     <i class="fa fa-windows"></i>
                 </div> <br>
-                <div class="text"></div>
+                <!-- <div class="text"> </div> -->
+                <div>
+                    <h1 class=""> <span class="auto-text"></span></h1>
+                </div>
                 <div class="btns">
                     <a href="" class="btn1">Contact Us</a>
                     <a href="" class="btn2">Learn Today</a>
@@ -99,6 +102,7 @@
             </div>
         </div>
     </section>
+
 
 
     
@@ -127,15 +131,24 @@
     
     <script src="js/bootstrap.bundle.js"></script>
 
+
+
     <script src="jquery/jquery.js"></script>
+
 
     <script src="jquery-ui/jquery-ui.js"></script>
 
 
+
+
+
     <script src="js/jquery.ripples-min.js"></script>
 
+
+    <script src="js/typed.min.js" type="text/javascript"></script>  
+
     <script src="js/main.js"></script>
-    <script src="js/typed.min.js"></script>
+
 
 
 </body>
